--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,8 +15,8 @@
     <%= f.input :password_confirmation,
                 required: true,
                 input_html: { autocomplete: "new-password" } %>
+<!-- ADD  LOCATION,  NICKNAME  & BIO INPUTS -->
   </div>
-
   <div class="form-actions">
     <%= f.button :submit, "Sign up" %>
   </div>
