--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -1,2 +1,22 @@
-<h1>Spots#index</h1>
-<p>Find me in app/views/spots/index.html.erb</p>
+<div class="container">
+
+  <div class="cards my-5">
+    <% @spots.each do |spot| %>
+      <div class="card-spot">
+        <% if spot.photos.attached? %>
+          <%= link_to(cl_image_tag(spot.photos.first.key, height: 230, width: 330, crop: :fill), spot_path(spot)) %>
+        <% end %>
+        <div class="card-spot-infos">
+          <div>
+            <h2><%= link_to spot.name, spot_path(spot) %></h2>
+            <p>Level: <%= spot.level %> </p>
+          </div>
+          <div>
+           <h2><i class="fas fa-map-marker-alt" style="color: rgba(0,0,0,0.7);"></i>&nbsp;<%= spot.location %></h2>
+           <p class="text-right"><%= image_tag("wave.png", width: 22) %>&nbsp;<%= spot.waves %></p>
+          </div>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</div>
