--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -1,10 +1,10 @@
-<div class="container">
+<div style="display: grid; grid-template-columns: 2fr 1.4fr; grid-gap: 2px;">
 
   <div class="cards my-5">
     <% @spots.each do |spot| %>
       <div class="card-spot">
         <% if spot.photos.attached? %>
-          <%= link_to(cl_image_tag(spot.photos.first.key, height: 230, width: 330, crop: :fill), spot_path(spot)) %>
+          <%= link_to(cl_image_tag(spot.photos.first.key, height: 200, width: 330, crop: :fill), spot_path(spot)) %>
         <% end %>
         <div class="card-spot-infos">
           <div>
@@ -18,5 +18,10 @@
         </div>
       </div>
     <% end %>
+  </div>
+  <div id="map"
+     style="width: 100%; height: 600px;"
+     data-markers="<%= @markers.to_json %>"
+     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
   </div>
 </div>
