--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,5 +1,4 @@
 .avatar {
-  width: 40px;
   border-radius: 50%;
 }
 .avatar-large {
@@ -7,10 +6,11 @@
   border-radius: 50%;
 }
 .avatar-bordered {
-  width: 40px;
+
   border-radius: 50%;
-  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-  border: white 1px solid;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.144);
+  border:#FF914D 1px solid;
+  margin-right: 5px;
 }
 .avatar-square {
   width: 40px;
