--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -21,6 +21,11 @@
                 hint: "we need your current password to confirm your changes",
                 required: true,
                 input_html: { autocomplete: "current-password" } %>
+    <%= f.input :location,
+                required: false %>
+    <%= f.input :bio,
+                required: false %>            
+    <%= f.input :photo, as: :file %>
   </div>
 
   <div class="form-actions">
