--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,6 +15,13 @@
     <%= f.input :password_confirmation,
                 required: true,
                 input_html: { autocomplete: "new-password" } %>
+    <%= f.input :nickname,
+                required: true %>
+    <%= f.input :location,
+                required: true %>
+    <%= f.input :bio,
+                required: false %>            
+    <%= f.input :photo, as: :file %>
 <!-- ADD  LOCATION,  NICKNAME  & BIO INPUTS -->
   </div>
   <div class="form-actions">
