setting up default value  for waves  + adding country to show page

--- a/app/views/spots/show.html.erb
+++ b/app/views/spots/show.html.erb
@@ -28,7 +28,7 @@
       <div class="card-spot-infos">
         <h2><strong><%= @spot.name %></strong></h2>
         <br>
-        <em><i class="fas fa-map-marker-alt px-1" style="color: rgba(0,0,0,0.7);"></i><%= @spot.location %></em>
+        <em><i class="fas fa-map-marker-alt px-1" style="color: rgba(0,0,0,0.7);"></i><%= @spot.location + " , " + @spot.country %></em>
         <br>
         <br>
         <p><button type="button" class="btn btn-light">Confirm This Spot</button></p>
