trips controller + banner

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,5 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="banner">
+  <div class="container d-flex justify-content-center align-content-center">
+    <%= link_to "Organize my trip", spots_path, class: "text-center btn btn-flat"%>
+  </div>
+</div>
