--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -19,7 +19,9 @@
           <% end%>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
             <p class="dropdown-item bold"><strong>Hi, <%= current_user.nickname %>! </strong></p>
-            <%= link_to "My trips", "#" , class: "dropdown-item" %>
+            <%= link_to "My trips", trips_path , class: "dropdown-item" %>
+            <%= link_to "Add your spot", "#", class: "dropdown-item" %>
+            <div class="dropdown-divider"></div>
             <%= link_to "My account", edit_user_registration_path, class: "dropdown-item" %>
             <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           </div>
