--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -4,7 +4,7 @@
     <% @spots.each do |spot| %>
       <div class="card-spot">
         <% if spot.photos.attached? %>
-          <%= link_to(cl_image_tag(spot.photos.first.key, height: 200, width: 330, crop: :fill), spot_path(spot)) %>
+          <%= link_to(cl_image_tag(spot.photos.first.key, height: 200, width: 350, crop: :fill), spot_path(spot)) %>
         <% end %>
         <div class="card-spot-infos">
           <div>
@@ -12,7 +12,7 @@
             <p>Level: <%= spot.level %> </p>
           </div>
           <div>
-           <h2><i class="fas fa-map-marker-alt" style="color: rgba(0,0,0,0.7);"></i>&nbsp;<%= spot.location %></h2>
+           <h2><i class="fas fa-map-marker-alt" style="color: rgba(0,0,0,0.7);"></i>&nbsp;<%= spot.location %>, <%= spot.country %></h2>
            <p class="text-right"><%= image_tag("wave.png", width: 22) %>&nbsp;<%= spot.waves %></p>
           </div>
         </div>
