--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -20,7 +20,7 @@
     <% end %>
   </div>
   <div id="map"
-     style="width: 100%; height: 600px;"
+     style="width: 100%; height: 600px; position: sticky; top: 0; z-index: 500;"
      data-markers="<%= @markers.to_json %>"
      data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
   </div>
