new review page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,8 +8,10 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import 'mapbox-gl/dist/mapbox-gl';
+@import "jquery-bar-rating/dist/themes/bars-square";
 
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+
 
