adding a review to a spot

--- a/app/views/spots/show.html.erb
+++ b/app/views/spots/show.html.erb
@@ -91,7 +91,7 @@
     </div>
     <% end %>
   </div>
-<%= link_to "Add a review", new_spot_review_path, class: "btn btn-primary"%>
+<%= link_to "Add a review", new_spot_review_path(@spot), class: "btn btn-primary"%>
 </div>
 
 
