adding reviews to index and show page

--- a/app/views/spots/show.html.erb
+++ b/app/views/spots/show.html.erb
@@ -36,8 +36,7 @@
         <p><button type="button" class="btn btn-light">Confirm This Spot</button></p>
       </div>
       <div class="card-spot-reviews">
-        <p>⭐️⭐️⭐️⭐️⭐️</p>
-        <p class="m-0">4.5/5 reviews</p>
+        <p class="m-0"> <%= image_tag("wave.png", width: 22) %> <%= @spot.waves %> </p>
       </div>
     </div>
   </div>
