pop  inserted to show page

--- a/app/views/spots/show.html.erb
+++ b/app/views/spots/show.html.erb
@@ -33,7 +33,30 @@
         <em><i class="fas fa-map-marker-alt px-1" style="color: rgba(0,0,0,0.7);"></i><%= @spot.location + " , " + @spot.country %></em>
         <br>
         <br>
-        <p><button type="button" class="btn btn-light">Confirm This Spot</button></p>
+        <!-- Button trigger modal -->
+        <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModal">
+          Confirm this spot
+        </button>
+
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                ...
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-primary">Confirm this spot</button>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="card-spot-reviews">
         <p class="m-0"> <%= image_tag("wave.png", width: 22) %> <%= @spot.waves %> </p>
