--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -12,7 +12,7 @@
             <p>Level: <%= spot.level %> </p>
           </div>
           <div>
-           <h2><i class="fas fa-map-marker-alt" style="color: rgba(0,0,0,0.7);"></i>&nbsp;<%= spot.location %>, <%= spot.country %></h2>
+           <h2><i class="fas fa-map-marker-alt" style="color: rgba(0,0,0,0.7);"></i>&nbsp;<%= spot.city %>, <%= spot.country %></h2>
            <p class="text-right"><%= image_tag("wave.png", width: 22) %>&nbsp;<%= spot.waves %></p>
           </div>
         </div>
