--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -1,4 +1,4 @@
-<h2>Trip to <%= @trip.spot.location %>
+<h2>Trip to <%= @trip.spot.city %>
 
 <h3><%= @trip.start_date %> - <%= trip.end_date %></h3>
 
