--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,6 +9,7 @@
 @import "font-awesome";
 @import 'mapbox-gl/dist/mapbox-gl';
 @import "jquery-bar-rating/dist/themes/css-stars";
+@import "flatpickr/dist/flatpickr";
 
 // Your CSS partials
 @import "components/index";
