--- a/app/views/spots/_infowindow.html.erb
+++ b/app/views/spots/_infowindow.html.erb
@@ -1,6 +1,6 @@
 <div class="text-left">
 <h4><%= spot.name %></h4>
-<p><i class="fas fa-map-marker-alt" style="color: rgba(0,0,0,0.7);"></i>&nbsp;<%= spot.location %>, <%= spot.country %><br>Level: <%= spot.level %></p>
+<p><i class="fas fa-map-marker-alt" style="color: rgba(0,0,0,0.7);"></i>&nbsp;<%= spot.city %>, <%= spot.country %><br>Level: <%= spot.level %></p>
 <% if spot.photos.attached? %>
    <%= link_to(cl_image_tag(spot.photos.first.key, height: 100, width: 200, crop: :fill), spot_path(spot)) %>
 <% end %>
