--- a/app/views/spots/show.html.erb
+++ b/app/views/spots/show.html.erb
@@ -30,7 +30,7 @@
       <div class="card-spot-infos">
         <h2><strong><%= @spot.name %></strong></h2>
         <br>
-        <em><i class="fas fa-map-marker-alt px-1" style="color: rgba(0,0,0,0.7);"></i><%= @spot.location + " , " + @spot.country %></em>
+        <em><i class="fas fa-map-marker-alt px-1" style="color: rgba(0,0,0,0.7);"></i><%= @spot.city + " , " + @spot.country %></em>
         <br>
         <br>
         <!-- Button trigger modal -->
@@ -43,16 +43,24 @@
           <div class="modal-dialog" role="document">
             <div class="modal-content">
               <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Give us some details</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                   <span aria-hidden="true">&times;</span>
                 </button>
               </div>
-              <div class="modal-body">
-                ...
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-primary">Confirm this spot</button>
+              <div class="container">
+                <div class="form-wrapper" style="width: 400px; margin: 0 auto;">
+                    <%= simple_form_for [@spot, @trip] do |f| %>
+                  <div class="modal-body">
+                      <%= f.input :surfers, as: :integer, label: false, placeholder: "We'll be 3 🏄🏄‍♂️🏄‍♀️ " %>
+                      <%= f.input :start_date, as: :string, label: false, input_html: {class: "datepicker form-control", placeholder: "Start date"} %>
+                      <%= f.input :end_date, as: :string, label: false, input_html: {class: "datepicker form-control", placeholder: "End date"} %>
+                  </div>
+                  <div class="modal-footer">
+                    <%= f.submit "Surf my trip", class: "btn btn-primary" %>
+                  </div>
+                  <% end %>
+                </div>
               </div>
             </div>
           </div>
