--- a/app/views/spots/show.html.erb
+++ b/app/views/spots/show.html.erb
@@ -1,5 +1,4 @@
 
-
 <div class="container">
   <div class="container-carousel mt-5">
     <div class="carousel">
@@ -66,32 +65,38 @@
           </div>
         </div>
       </div>
+
       <div class="card-spot-reviews">
         <p class="m-0"> <%= image_tag("wave.png", width: 22) %> <%= @spot.waves %> </p>
       </div>
     </div>
   </div>
 </div>
-
+<br>
+<div class="container">
+<%= link_to "Go back to Spots", spots_path, class: "btn btn-dark"%>
+</div>
 <br>
 <p class="text-center"><em><%= @spot.punchline %></em></p>
+
 <div class="spot-details-container" data-stormglass-api-key="<%= ENV['STORMGLASS_API_KEY'] %>" data-latitude="<%= @spot.latitude %>" data-longitude="<%= @spot.longitude %>" >
   <div class="spot-details row justify-content-between">
     <div class="spot-recap col-8">
-    <p>What about the spot: <%= @spot.description %> <%#= @spot.description  %> </p>
+    <p>What about the spot: <%= @spot.description %></p>
     <p>What about the place? <%= @spot.about_location %></p>
 
     <p>How's the weather atm? </p>
-    <p>Air temp: <span id='airtemperature'>12</span>°</p>
-    <p>Water temp: <span id='watertemperature'>8</span>°</p>
-
-    <p>Swell Direction: <span id='swelldirection'>WNW</span></p>
-    <p>Swell Height: <span id='swellheight'>1.6</span>m</p>
-
-    <p>Wind Direction: <span id='winddirection'>SSE</span></p>
-    <p>Wind Speed: <span id='windspeed'>12</span>km/h</p>
-
-    <p>Wave Height: <span id='waveheight'>1,3</span>m</p>
+    <p>Air temp 🌡 : <span id='airtemperature'>12</span>°</p>
+    <p>Water temp 💧: <span id='watertemperature'>8</span>°</p>
+    <p>Swell Direction ➚: <span id='swelldirection'>WNW</span></p>
+    <p>Wave Height 🌊: <span id='waveheight'>1,3</span>m</p>
+    <p>Wind infos:</p>
+    <div class="compass" id="wind">
+      <div class="direction">
+        <p id="wind-direction">SW<span id="windspeed">km/h</span></p>
+      </div>
+      <div class="arrow" id="wind-arrow"></div>
+    </div>
     </div>
     <div class="spot-forecast col-4">
       <div id="map"
