changes in banner and new footer

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="banner">
   <div class="container d-flex justify-content-center align-content-center">
-    <%= link_to "Organize my trip", spots_path, class: "text-center btn btn-flat"%>
+    <%= link_to "ORGANIZE MY TRIP!", spots_path, class: "text-center btn btn-flat"%>
   </div>
 </div>
