--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -3,7 +3,7 @@
     background-position: center;
     height: calc(100vh - 126px);
     padding: 150px 0;
-    background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(banner.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), asset_url("assets/banner.jpg");
     align-content: center;
   }
   
@@ -19,19 +19,24 @@
     font-size: 20px;
     color: white;
     opacity: .7;
-    text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+    text-shadow: 1px 1px 3px rgba(0,0,0,0.3);
   }
   
   .banner .btn {
-      padding: 30px;
-      font-size: 30px;
-      background-color: rgba(0,0,0,0.2);
+      padding: 25px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.2);
+      font-size: 25px;
+      background-color: rgba(255, 145, 77, 0.301);
       border: rgba(0,0,0,0.4), solid, 1px;
-      border-radius: 4px;
+      border-radius: 9px;
       position: absolute;
       top: 400px;
+      font-family: 'Hammersmith One', sans-serif;
+      font-weight: light;
+      text-shadow: 1px 1px 2px rgba(0,0,0,0.2);
+
   }
 
   .banner .btn:hover {
-    background-color: rgba(0, 0, 0, 0.062);
+    background-color:  rgba(255, 145, 77, 0.411);
   }
