banner image fixed?

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="banner">
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('<%= image_path("banner.jpg") %>');">
   <div class="container d-flex justify-content-center align-content-center">
     <%= link_to "ORGANIZE MY TRIP!", spots_path, class: "text-center btn btn-flat"%>
   </div>
