--- a/app/views/spots/show.html.erb
+++ b/app/views/spots/show.html.erb
@@ -82,22 +82,57 @@
 <div class="spot-details-container" data-stormglass-api-key="<%= ENV['STORMGLASS_API_KEY'] %>" data-latitude="<%= @spot.latitude %>" data-longitude="<%= @spot.longitude %>" >
   <div class="spot-details row justify-content-between">
     <div class="spot-recap col-8">
-    <p>What about the spot: <%= @spot.description %></p>
-    <p>What about the place? <%= @spot.about_location %></p>
-
-    <p>How's the weather atm? </p>
-    <p>Air temp 🌡 : <span id='airtemperature'>12</span>°</p>
-    <p>Water temp 💧: <span id='watertemperature'>8</span>°</p>
-    <p>Swell Direction ➚: <span id='swelldirection'>WNW</span></p>
-    <p>Wave Height 🌊: <span id='waveheight'>1,3</span>m</p>
-    <p>Wind infos:</p>
-    <div class="compass" id="wind">
-      <div class="direction">
-        <p id="wind-direction">SW<span id="windspeed">km/h</span></p>
+      <div class="wind-infos" style="display: grid; grid-template-columns: 1fr 1fr 1fr; grid-gap: 16px;">
+          <p><strong>About the spot: </strong><%= @spot.description %></p>
+          <div class="wind-spot-info">
+          <p>Wind infos:</p>
+          <div class="compass" id="wind">
+            <div class="direction">
+              <p id="wind-direction">SW<span id="windspeed">km/h</span></p>
+            </div>
+            <div class="arrow" id="wind-arrow"></div>
+          </div>
+        </div>
+        <p>About <%= @spot.city %> <%= @spot.about_location %></p>
       </div>
-      <div class="arrow" id="wind-arrow"></div>
+
+    <em><p class="text-center">How's the weather atm? </p></em>
+    <div class="container weather" style="display: grid; grid-template-columns: 1fr 1fr 1fr; grid-gap: 16px;">
+      <div class="card air-temp">
+        <div class="card-body">
+          <h4>Air temp</h4>
+          <br>
+          <%= image_tag("thermometer.png") %> <%= image_tag("air-weather.png") %>
+          <br>
+          <br>
+          <h5><span id='airtemperature'>12</span>°</h5>
+        </div>
+      </div>
+      <div class="card water-temp">
+        <div class="card-body">
+          <h4>Water temp</h4>
+          <br>
+          <%= image_tag("thermometer.png") %> <%= image_tag("water-weather.png") %>
+          <br>
+          <br>
+          <h5><span id='watertemperature'>8</span>°</h5>
+        </div>
+      </div>
+      <div class="card wave-height">
+        <div class="card-body">
+          <h4>Wave height</h4>
+          <br>
+          <%= image_tag("wave-show.png") %> <%= image_tag("wave-height.png") %>
+          <br>
+          <br>
+          <h5><span id='waveheight'>1,3</span>m</h5>
+        </div>
+      </div>
     </div>
-    </div>
+    <br>
+    <br>
+  </div>
+
     <div class="spot-forecast col-4">
       <div id="map"
         style="width: 100%; height: 600px;"
