--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,6 +8,13 @@
 
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
+  <div class="buttons text-center mr-3">
+   <% if user_signed_in? %>
+     <%= link_to "My trips", trips_path , class: "btn btn-primary" %>
+     <%= link_to "Add your spot", new_spot_path, class: "btn btn-primary" %>
+     <%= link_to "Browse spots", spots_path , class: "btn btn-primary" %>
+   <% end %>
+   </div>
     <ul class="navbar-nav mr-auto">
 
       <% if user_signed_in? %>
@@ -17,18 +24,17 @@
           <% else %>
             <%= image_tag "avatar-default.png", height: 50, crop: :thumb, class: "avatar-bordered dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <% end%>
+          
+
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <p class="dropdown-item bold"><strong>Hi, <%= current_user.nickname %>! </strong></p>
-            <%= link_to "My trips", trips_path , class: "dropdown-item" %>
-            <%= link_to "Add your spot", new_spot_path, class: "dropdown-item" %>
-            <div class="dropdown-divider"></div>
+            <p class="dropdown-item bold"><strong>Hello, <%= current_user.nickname %>! </strong></p>
             <%= link_to "My account", edit_user_registration_path, class: "dropdown-item" %>
             <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           </div>
         </li>
       <% else %>
         <li class="nav-item">
-          <%= link_to "Login", new_user_session_path, class: "nav-link" %>
+          <%= link_to "Login", new_user_session_path, class: "nav-link btn btn-outline-primary p-3"  %>
         </li>
       <% end %>
    </ul>
