--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -6,14 +6,17 @@
         <% if spot.photos.attached? %>
           <%= link_to(cl_image_tag(spot.photos.first.key, height: 200, width: 350, crop: :fill), spot_path(spot)) %>
         <% end %>
-        <div class="card-spot-infos">
+        <div class="card-spot-infos d-flex justify-content-between align-items-start">
           <div>
             <h2><%= link_to spot.name, spot_path(spot) %></h2>
             <p>Level: <%= spot.level %> </p>
           </div>
-          <div>
-           <h2><i class="fas fa-map-marker-alt" style="color: rgba(0,0,0,0.7);"></i>&nbsp;<%= spot.city %>, <%= spot.country %></h2>
-           <p class="text-right"><%= image_tag("wave.png", width: 22) %>&nbsp;<%= spot.waves %></p>
+          <div class="infos d-flex flex-column align-items-end">
+           <h2><i class="fas fa-map-marker-alt " style="color: rgba(0,0,0,0.7);"></i>&nbsp;<%= spot.city %>, <%= spot.country %></h2>
+           <p class="text-right"><% spot.waves.times do %>
+            <%= image_tag("wave.png", width: 20, style: "margin-left: -6px;") %>
+           <% end %> 
+          <br><i class="far fa-comment" style="color: rgba(0,0,0,0.6); "></i> <%= spot.reviews.count %> </p>
           </div>
         </div>
       </div>
