--- a/app/views/spots/show.html.erb
+++ b/app/views/spots/show.html.erb
@@ -81,57 +81,52 @@
 
 <div class="spot-details-container" data-stormglass-api-key="<%= ENV['STORMGLASS_API_KEY'] %>" data-latitude="<%= @spot.latitude %>" data-longitude="<%= @spot.longitude %>" >
   <div class="spot-details row justify-content-between">
+
     <div class="spot-recap col-8">
-      <div class="wind-infos" style="display: grid; grid-template-columns: 1fr 1fr 1fr; grid-gap: 16px;">
-          <p><strong>About the spot: </strong><%= @spot.description %></p>
-          <div class="wind-spot-info">
-          <p>Wind infos:</p>
-          <div class="compass" id="wind">
-            <div class="direction">
-              <p id="wind-direction">SW<span id="windspeed">km/h</span></p>
+      <div class="row m-0">
+        <div class="col-8">
+          <div class="wind-infos">
+            <p><strong>About the spot: </strong><%= @spot.description %></p>
+            <p><strong>About <%= @spot.city %> :</strong><%= @spot.about_location %></p>
+            <div class="wind-spot-info">
+              <p class="text-center">Wind infos:</p>
+              <div class="compass" id="wind">
+                <div class="direction">
+                  <p id="wind-direction">SW<span id="windspeed">km/h</span></p>
+                </div>
+                <div class="arrow" id="wind-arrow"></div>
+              </div>
             </div>
-            <div class="arrow" id="wind-arrow"></div>
           </div>
         </div>
-        <p>About <%= @spot.city %> <%= @spot.about_location %></p>
-      </div>
-
-    <em><p class="text-center">How's the weather atm? </p></em>
-    <div class="container weather" style="display: grid; grid-template-columns: 1fr 1fr 1fr; grid-gap: 16px;">
-      <div class="card air-temp">
-        <div class="card-body">
-          <h4>Air temp</h4>
-          <br>
-          <%= image_tag("thermometer.png") %> <%= image_tag("air-weather.png") %>
-          <br>
-          <br>
-          <h5><span id='airtemperature'>12</span>°</h5>
-        </div>
-      </div>
-      <div class="card water-temp">
-        <div class="card-body">
-          <h4>Water temp</h4>
-          <br>
-          <%= image_tag("thermometer.png") %> <%= image_tag("water-weather.png") %>
-          <br>
-          <br>
-          <h5><span id='watertemperature'>8</span>°</h5>
-        </div>
-      </div>
-      <div class="card wave-height">
-        <div class="card-body">
-          <h4>Wave height</h4>
-          <br>
-          <%= image_tag("wave-show.png") %> <%= image_tag("wave-height.png") %>
-          <br>
-          <br>
-          <h5><span id='waveheight'>1,3</span>m</h5>
+        <div class="col-4">
+          <em><p class="text-center">How's the weather atm? </p></em>
+          <div class="container weather" style="display: grid; grid-template-rows: 1fr 1fr 1fr; grid-gap: 16px;">
+            <div class="card air-temp">
+              <div class="card-body">
+                <h4>Air temp</h4>
+                <%= image_tag("thermometer.png") %> <%= image_tag("air-weather.png") %>
+                <h5><span id='airtemperature'>12</span>°</h5>
+              </div>
+            </div>
+            <div class="card water-temp">
+              <div class="card-body">
+                <h4>Water temp</h4>
+                <%= image_tag("thermometer.png") %> <%= image_tag("water-weather.png") %>
+                <h5><span id='watertemperature'>8</span>°</h5>
+              </div>
+            </div>
+            <div class="card wave-height">
+              <div class="card-body">
+                <h4>Wave height</h4>
+                <%= image_tag("wave-show.png") %> <%= image_tag("wave-height.png") %>
+                <h5><span id='waveheight'>1,3</span>m</h5>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-    <br>
-    <br>
-  </div>
 
     <div class="spot-forecast col-4">
       <div id="map"
@@ -141,7 +136,6 @@
       </div>
     </div>
   </div>
-  <br>
   <div class="row">
     <% @spot.reviews.each do |review| %>
     <div class="col-12 col-lg-6">
