--- a/app/assets/stylesheets/components/_reviews.scss
+++ b/app/assets/stylesheets/components/_reviews.scss
@@ -8,12 +8,6 @@
   margin-bottom: 16px;
 }
 
-.spot-review img {
-  height: 100%;
-  width: 150px;
-  object-fit: cover;
-}
-
 .spot-review h2 {
   font-size: 16px;
   font-weight: bold;
@@ -21,7 +15,7 @@
 }
 
 .spot-review p {
-  font-size: 12px;
+  font-size: 20px;
   line-height: 1.4;
   opacity: .7;
   margin-bottom: 0;
@@ -32,9 +26,13 @@
   padding: 16px;
 }
 
-.spot-review .spot-review-infos img {
+.review-content img {
   height: 20px;
   width: 20px;
   margin-right: -3px;
   margin-top: 3px;
+}
+
+.spot-review-photo img{
+  margin: 30px;
 }
