--- a/app/views/spots/show.html.erb
+++ b/app/views/spots/show.html.erb
@@ -68,6 +68,7 @@
 
       <div class="card-spot-reviews">
         <p class="m-0"> <%= image_tag("wave.png", width: 22) %> <%= @spot.waves %> </p>
+        <p><i class="far fa-comment mr-1" style="color: rgba(0,0,0,0.6); "></i> <%= @spot.reviews.count %> </p>
       </div>
     </div>
   </div>
