--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
   </div>
 </div>
 
-<h2 class="text-center mt-5">Most reviewed Surf Spots</h2>
+<h2 class="text-center mt-5">Best Rated Surf Spots</h2>
 <div class="cards my-5">
     <% @spots.each do |spot| %>
       <div class="card-spot">
@@ -27,4 +27,3 @@
       </div>
     <% end %>
 </div>
-
