Styling  the showp age

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,8 +4,7 @@
     <title>Surf Your Trip - Organise Your Next Surf Trip</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <link href="/assets/icon.png" rel="shortcut icon" type="image/x-icon" />
-    <meta name="description" content="<%= meta_description %>">
+    <%= favicon_link_tag %>
 
     <!-- Facebook Open Graph data -->
     <meta property="og:title" content="<%= meta_title %>" />
