--- a/app/assets/stylesheets/components/_card_spot.scss
+++ b/app/assets/stylesheets/components/_card_spot.scss
@@ -42,3 +42,11 @@
 .card-spot-infos a:hover {
   text-decoration: none;
 }
+
+.card-body {
+  padding: 10px;
+}
+
+.card-body h5{
+  margin-top: 10px;
+}
