--- a/app/assets/stylesheets/components/_spot_weather.scss
+++ b/app/assets/stylesheets/components/_spot_weather.scss
@@ -4,10 +4,15 @@
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   text-align: center;
   h4 {
-    color: #8DB0FC;
+    color: #1F4EC5;
+    font-size: 20px;
+    font-weight:bold;
+    font-family: 'Varela Round', sans-serif;
+
   }
   h5 {
-    color: #548AFF;
+    color: #1F4EC5;
+    font-family: 'Varela Round', sans-serif;
   }
 }
 
@@ -17,10 +22,14 @@
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   text-align: center;
     h4 {
-    color: #8DB0FC;
+    color: #1F4EC5;
+    font-size: 20px;
+    font-weight:bold;
+    font-family: 'Varela Round', sans-serif;
   }
   h5 {
-    color: #548AFF;
+    color: #1F4EC5;
+    font-family: 'Varela Round', sans-serif;
   }
 }
 
@@ -30,17 +39,20 @@
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   text-align: center;
     h4 {
-    color: #8DB0FC;
+    color: #1F4EC5;
+    font-size: 20px;
+    font-weight:bold;
+    font-family: 'Varela Round', sans-serif;
   }
   h5 {
-    color: #548AFF;
+    color: #1F4EC5;
+    font-family: 'Varela Round', sans-serif;
   }
 }
-
-
 
 .wind-spot-info {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
+
