--- a/app/views/spots/new.html.erb
+++ b/app/views/spots/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row justify-content-center">
-    <div  class="col-6">
+    <div  class="col-6 bg-white mt-5">
       <h1 class="text-center">New spot</h1>
       <%= simple_form_for @spot do |f| %>
         <%= f.input :name,
