--- a/app/views/spots/show.html.erb
+++ b/app/views/spots/show.html.erb
@@ -1,4 +1,3 @@
-
 <div class="container">
   <div class="container-carousel mt-5">
     <div class="carousel">
@@ -11,7 +10,6 @@
         <div class="carousel-inner">
           <% @spot.photos.each_with_index do |photo, index| %>
             <div class="carousel-item <%= 'active' if index == 0 %>" alt=" <%= index %>" style="background-image: url('<%= cl_image_path photo.key %>')">
-              <%#= cl_image_tag photo.key, class: "d-block w-100" %>
             </div>
           <% end %>
         </div>
@@ -80,9 +78,9 @@
 <%= link_to "Go back to Spots", spots_path, class: "btn btn-dark"%>
 </div>
 <br>
-<p class="text-center"><em><%= @spot.punchline %></em></p>
+<p class="text-center font-weight-bold"><em>"<%= @spot.punchline %>"</em></p>
 
-<div class="spot-details-container" data-stormglass-api-key="<%= ENV['STORMGLASS_API_KEY'] %>" data-latitude="<%= @spot.latitude %>" data-longitude="<%= @spot.longitude %>" >
+<div class="spot-details-container container" data-stormglass-api-key="<%= ENV['STORMGLASS_API_KEY'] %>" data-latitude="<%= @spot.latitude %>" data-longitude="<%= @spot.longitude %>" >
   <div class="spot-details row justify-content-between">
 
     <div class="spot-recap col-8">
@@ -92,7 +90,7 @@
             <p><strong>About the spot: </strong><%= @spot.description %></p>
             <p><strong>About <%= @spot.city %>: </strong><%= @spot.about_location %></p>
             <div class="wind-spot-info">
-              <p class="text-center">Wind infos:</p>
+              <p class="text-center">Wind 🌬</p>
               <div class="compass" id="wind">
                 <div class="direction">
                   <p id="wind-direction">SW<span id="windspeed">km/h</span></p>
@@ -103,26 +101,26 @@
           </div>
         </div>
         <div class="col-4">
-          <em><p class="text-center">How's the weather atm? </p></em>
+          <em><p class="text-center">Current Weather on <%= Time.now.strftime("%d/%m/%Y 12:00")%></p></em>
           <div class="container weather" style="display: grid; grid-template-rows: 1fr 1fr 1fr; grid-gap: 16px;">
             <div class="card air-temp">
               <div class="card-body">
                 <h4>Air temp</h4>
-                <%= image_tag("thermometer.png") %> <%= image_tag("air-weather.png") %>
+                <%= image_tag "thermometer.png", class: "my-2"%>
                 <h5><span id='airtemperature'>12</span>°</h5>
               </div>
             </div>
             <div class="card water-temp">
               <div class="card-body">
                 <h4>Water temp</h4>
-                <%= image_tag("thermometer.png") %> <%= image_tag("water-weather.png") %>
+                <%= image_tag "water-weather.png", class: "my-2" %>
                 <h5><span id='watertemperature'>8</span>°</h5>
               </div>
             </div>
             <div class="card wave-height">
               <div class="card-body">
                 <h4>Wave height</h4>
-                <%= image_tag("wave-show.png") %> <%= image_tag("wave-height.png") %>
+                <%= image_tag "wave-show.png", class: "my-2" %> <%= image_tag("wave-height.png") %>
                 <h5><span id='waveheight'>1,3</span>m</h5>
               </div>
             </div>
@@ -133,7 +131,7 @@
 
     <div class="spot-forecast col-4">
       <div id="map"
-        style="width: 100%; height: 600px;"
+        style="width: 100%; height: 635px;"
         data-markers="<%= @marker.to_json %>"
         data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
       </div>
@@ -142,37 +140,37 @@
   <br>
 
   <div class="container reviews mt-4 mb-3 justify-content-center" style="width:1200px;">
+    <div class="container ">
     <div class="d-flex justify-content-between">
     <h4 class="mb-2">Reviews</h4>
     <%= link_to "Add a review", new_spot_review_path(@spot), class: "btn btn-primary"%>
     </div>
-    <div class="container ">
       <% if @spot.reviews.blank? %>
         Be the first to leave a review for <%= @spot.name %>
       <% else %>
         <% @spot.reviews.each do |review| %>
-          <div class="card d-flex align-content-center mt-4 justify-self-center" style="border: none;">
+          <div class="card d-flex align-content-center mt-4 p-3 justify-self-center border rounded shadow">
             <div class="spot-review-infos d-flex justify-content-between mt-2">
               <div class="user d-flex align-items-center">
                 <% if review.user.photo.attached? %>
-                  <%= (cl_image_tag(review.user.photo.key, height: 50, width: 50, crop: :fill, class: "avatar ml-2 ")) %>
+                  <%= (cl_image_tag(review.user.photo.key, height: 50, width: 50, crop: :fill, class: "avatar")) %>
                 <% else %>
-                  <%= image_tag "avatar-default.png", height: 50, crop: :thumb, class: "avatar ml-2" %>
+                  <%= image_tag "avatar-default.png", height: 50, crop: :thumb, class: "avatar" %>
                 <% end %>
-                  <p> &nbsp;&nbsp;<%= review.user.nickname %></p>
+                  <p class="m-0"> &nbsp;&nbsp;<%= review.user.nickname %></p> <span><small> &nbsp;&nbsp;<%= review.created_at.strftime("%Y-%m-%d") %></small></span>
               </div>
               <div class="waves mr-4">
-              <p><small> &nbsp;&nbsp;<%= review.created_at.strftime("%Y-%m-%d") %></small></p>
+              <% review.rating.times do %>
+              <%= image_tag("wave.png", style: "height: 20px; width: 20px; margin-right: -4px;") %>
+            <% end %>
 
               </div>
             </div>
 
           <div class="review-content m-2">
 
-            <p class="mt-1 mr-1"> <strong><%= review.title %></strong>   <% review.rating.times do %>
-              <%= image_tag("wave.png", style: "height: 20px; width: 20px; margin-right: -4px;") %>
-            <% end %></p>
-            <p><%= review.content %></p>
+            <p class="mt-1 mr-1"> <strong><%= review.title %></strong> </p>
+            <p class="m-0"><%= review.content %></p>
           </div>
           <div class="spot-review-photo">
             <% if review.photo.attached? %>
@@ -183,7 +181,6 @@
       <% end %>
     <%end%>
   </div>
-
 </div>
 
 
