--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,6 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('<%= image_path("banner.jpg") %>');">
-  <div class="container d-flex justify-content-center align-content-center">
+<div class="banner position-relative">
+  <%= video_tag "video.mp4", class: "banner-video", autoplay: :autoplay, loop: :loop, muted: :muted %>
+  <div class="banner-container d-flex justify-content-center align-content-center">
     <%= link_to "ORGANIZE MY TRIP!", spots_path, class: "text-center btn btn-flat"%>
   </div>
 </div>
