--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="form-wrapper"> 
+  <div class="form-wrapper">
     <%= simple_form_for :search, method: "get", class: 'form-inline' do |f| %>
       <div class="form-row">
         <div class="col-3">
@@ -15,9 +15,9 @@
       </div>
       <%= f.submit "Search", class: "btn btn-primary" %>
       <%= link_to "Reset the search", spots_path, class: "btn btn-primary" %>
-       
+
     <% end %>
-  </div> 
+  </div>
 </div>
 
 <div style="display: grid; grid-template-columns: 2fr 1.4fr; grid-gap: 2px;">
@@ -45,7 +45,7 @@
     <% end %>
   </div>
   <div id="map"
-     style="width: 100%; height: calc(100vh); position: sticky; top: 0; z-index: 500;"
+     style="width: 100%; height: calc(100vh); position: sticky; top: 0; z-index: 500; box-shadow: 0 0 15px rgba(0,0,0,0.1);"
      data-markers="<%= @markers.to_json %>"
      data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
   </div>
