--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="banner position-relative">
   <%= video_tag "video.mp4", class: "banner-video", autoplay: :autoplay, loop: :loop, muted: :muted %>
   <div class="banner-container d-flex justify-content-center align-content-center">
-    <%= link_to "ORGANIZE MY TRIP!", spots_path, class: "text-center btn btn-flat"%>
+    <%= link_to "Browse Spots!", spots_path, class: "text-center btn btn-flat"%>
   </div>
 </div>
 
