--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,12 +1,12 @@
 .banner {
     background-size: cover;
     background-position: center;
-    height: calc(100vh - 126px);
+    height: 100vh;
     align-content: center;
   }
 
 .banner-video {
-  height: calc(100vh - 126px);
+  height: 100vh;
   width: 100%;
   object-fit: cover;
 }
