--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
 
 <body>
   <div class="page-container">
-    <div class="navbar-container"><%= render "shared/navbar" %></div>
+    <div class="navbar-container <%= "navbar-container-homepage" if current_page?(root_path)%>"><%= render "shared/navbar" %></div>
     <div class="content-container"><%= yield %></div>
     <div class="footer-container"><%= render "shared/flashes" %><%= render "shared/footer" %></div>
   </div>
