--- a/app/views/spots/show.html.erb
+++ b/app/views/spots/show.html.erb
@@ -82,13 +82,13 @@
 
 <div class="spot-details-container container" data-stormglass-api-key="<%= ENV['STORMGLASS_API_KEY'] %>" data-latitude="<%= @spot.latitude %>" data-longitude="<%= @spot.longitude %>" >
   <div class="spot-details row justify-content-between">
-
     <div class="spot-recap col-8">
       <div class="row m-0">
         <div class="col-8">
-          <div class="wind-infos">
             <p><strong>About the spot: </strong><%= @spot.description %></p>
             <p><strong>About <%= @spot.city %>: </strong><%= @spot.about_location %></p>
+
+          <div class="wind-infos">
             <div class="wind-spot-info">
               <p class="text-center">Wind 🌬</p>
               <div class="compass" id="wind">
@@ -99,6 +99,7 @@
               </div>
             </div>
           </div>
+
         </div>
         <div class="col-4">
           <em><p class="text-center">Current Weather on <%= Time.now.strftime("%d/%m/%Y 12:00")%></p></em>
@@ -137,7 +138,7 @@
       </div>
     </div>
   </div>
-  <br>
+</div>
 
   <div class="container reviews mt-4 mb-3 justify-content-center" style="width:1200px;">
     <div class="container ">
@@ -182,16 +183,3 @@
     <%end%>
   </div>
 </div>
-
-
-
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
