no buttons on navbar, we still must change 404 :P

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -22,3 +22,14 @@
   z-index: 1000;
   width: 100%;
 }
+
+.btn-navbar {
+  font-family: 'Staatliches', cursive;
+  font-weight: light;
+  font-size: 25px;
+}
+.btn-navbar:hover {
+  font-size: 28px;
+  transition: 0.4s;
+
+}
