--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,7 @@
 // Specific CSS for your home-page
+
+h3 {
+    font-family: 'Staatliches', cursive;
+    font-weight: light;
+    font-size: 30x;
+}
