--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -35,7 +35,7 @@
   }
 
   .banner .btn {
-      padding: 25px;
+      padding: 23px;
       box-shadow: 0 0 15px rgba(0,0,0,0.2);
       font-size: 25px;
       background-color: rgba(255, 145, 77, 0.301);
@@ -43,7 +43,8 @@
       border-radius: 9px;
       position: absolute;
       top: 500px;
-      font-family: 'Hammersmith One', sans-serif;
+      font-family: 'Staatliches', cursive;
+      font-size: 35px;
       font-weight: light;
       text-shadow: 1px 1px 2px rgba(0,0,0,0.2);
 
