--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -42,3 +42,14 @@
       grid-template-columns: 1fr 1fr 1fr;
     }
   }
+
+.weather-forecast-card {
+  width: 130px;
+  height: 130px;
+ img {
+  height: 35px;
+  }
+  h4 {
+  font-size: 10px;
+  }
+}
