alerts on bottom-right

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -34,7 +34,7 @@
         </li>
       <% else %>
         <li class="nav-item">
-          <%= link_to "Login", new_user_session_path, class: "nav-link btn btn-outline-primary p-3"  %>
+          <%= link_to "Login", new_user_session_path, class: "nav-link btn btn-navbar p-3"  %>
         </li>
       <% end %>
    </ul>
