--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -7,6 +7,10 @@
     margin-right: auto;
   }
 
+.card-spot:hover {
+  transform: scale(1.1);
+}
+
 
 // Smallest device
 @media (min-width: 100px) and (max-width: 575px) {
