--- a/app/assets/stylesheets/components/_card_spot.scss
+++ b/app/assets/stylesheets/components/_card_spot.scss
@@ -17,8 +17,9 @@
 
 .card-spot h2 {
   font-size: 16px;
-  font-weight: bold;
+  font-weight: light;
   margin: 0;
+  font-family: "Nunito", "Helvetica", "sans-serif"
 }
 
 .card-spot .card-spot-infos {
