--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -17,6 +17,11 @@
   bottom: 0px;
   left: 0px;
   right: 0px;
+  text-align: center;
+  display: flex;
+  align-items: flex-end;
+    justify-content: center;
+    padding-bottom: 90px;
 
 }
   .banner h1 {
