--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,20 +1,84 @@
 .button-spot {
-  padding: 13px 20px;
-  font-size: 15px;
+  padding: 15px 25px;
+  font-size: 24px;
   text-align: center;
   cursor: pointer;
   outline: none;
   color: #fff;
-  background-color: #fca976;
+  background-color: #ff904b;
   border: none;
   border-radius: 15px;
-  box-shadow: 0 5px #999;
+  box-shadow: 0 9px #999;
 }
 
-.button-spot:hover {background-color: #FF904C}
+.button-spot:hover {background-color: #3e8e41}
 
 .button-spot:active {
-  background-color: #FF904C;
+  background-color: #3e8e41;
   box-shadow: 0 5px #666;
   transform: translateY(4px);
+}
+
+
+.magicBtn {
+  transform: scale(1.3);
+  background-color: rgba(255, 145, 77, 0.301);
+  border: rgba(0,0,0,0.4), solid, 1px;
+  border-radius: 9px;
+  color: white;
+  border: none;
+  padding: 15px;
+  font-size: 15px;
+  width: 140px;
+  text-align: center;
+  overflow: hidden;
+ transition: ease .5s;
+}
+
+
+
+.overflowCont {
+  color: white;
+  display: inline;
+  left: -100px;
+  position: relative;
+
+  background: linear-gradient(to right, #ff904b, #02aee7);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+
+.btnName {
+  display: inline;
+  position: relative;
+  left: -28px;
+
+  background: linear-gradient(to right, #ff904b, #02aee7);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.moveGroup {
+  left: 0px;
+  position: relative;
+  transition: cubic-bezier(0.72, -0.22, 0.38, 1.25) .5s;
+}
+
+.activate {
+  left: 125px;
+}
+
+a,button {
+  &:focus {
+    border:none;
+    outline:none;
+  }
+}
+
+.focus-blank{
+  &:active {
+  border:none;
+  outline:none;
+  }
 }
