button  on show page

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -54,7 +54,7 @@
   position: relative;
   left: -28px;
 
-  background: linear-gradient(to right, #ff904b, #02aee7);
+  background: white;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
