--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -11,6 +11,9 @@
   transform: scale(1.1);
 }
 
+.card-spot{
+  transition: all .5s ease-in-out;
+}
 
 // Smallest device
 @media (min-width: 100px) and (max-width: 575px) {
